--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!doctype html>
 
 <head>
-    <title>JavaScript Speech to Text</title>
+     <meta charset="UTF-8">
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SpeechToSpeak</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
